Login de coordenador, cadastro de coordenador

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 __pycache__/utilidades.cpython-313.pyc
 funcoes_do_sistema/__pycache__/__init__.cpython-313.pyc
 manipulador_de_dados/__pycache__/__init__.cpython-313.pyc
+funcoes_do_sistema/__pycache__/utilidades.cpython-313.pyc
+data/usuarios.json
+funcoes_do_sistema/__pycache__/systema_coordenador.cpython-313.pyc
