--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ manipulador_de_dados/__pycache__/__init__.cpython-313.pyc
 funcoes_do_sistema/__pycache__/utilidades.cpython-313.pyc
 data/usuarios.json
 funcoes_do_sistema/__pycache__/systema_coordenador.cpython-313.pyc
+data/eventos.json
