--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ funcoes_do_sistema/__pycache__/utilidades.cpython-313.pyc
 data/usuarios.json
 funcoes_do_sistema/__pycache__/systema_coordenador.cpython-313.pyc
 data/eventos.json
+funcoes_do_sistema/__pycache__/system_aluno.cpython-313.pyc
+funcoes_do_sistema/__pycache__/system_aluno.cpython-313.pyc
