--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ funcoes_do_sistema/__pycache__/systema_coordenador.cpython-313.pyc
 data/eventos.json
 funcoes_do_sistema/__pycache__/system_aluno.cpython-313.pyc
 funcoes_do_sistema/__pycache__/system_aluno.cpython-313.pyc
+data/inscritos.json
+funcoes_do_sistema/__pycache__/system_aluno.cpython-313.pyc
