arrumando mostrar eventos para o aluno

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ funcoes_do_sistema/__pycache__/system_aluno.cpython-313.pyc
 funcoes_do_sistema/__pycache__/system_aluno.cpython-313.pyc
 data/inscritos.json
 funcoes_do_sistema/__pycache__/system_aluno.cpython-313.pyc
+funcoes_do_sistema/__pycache__/system_aluno.cpython-313.pyc
